Quartz sync: Aug 17, 2024, 7:13 AM

--- a/content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md
@@ -91,11 +91,4 @@ cssclasses:
 ## Примечания
 Ксандр слишком много знает про особняк. Назвал Элсиет - сильварией, хотя раньше бы этого не понял и не вникал.
 
-
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+> Следующая сессия: [[День 10. В ожидании аудиенции]]
