--- a/content/Материалы/Таблицы/Все персонажи игроков.md
+++ b/content/Материалы/Таблицы/Все персонажи игроков.md
@@ -1,5 +1,5 @@
-| File                                                                                                                                          | Дата игры  | Дата в игре                                                                        |
-| --------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ---------------------------------------------------------------------------------- |
-| [[Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md\|День 10.  Завершение миссий Сэдии]]                                       | 08.08.2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
-| [[Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md\|День 10. Межпланарное зеркало]]                                               | 30.07.2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
-| [[Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md\|День 9. Званный ужин у семьи Кляйн и снова в особняк]] | 27.07.2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 9</li></ul>  |
+| File                                                                                                    | Дата игры  | Дата в игре                                                                        |
+| ------------------------------------------------------------------------------------------------------- | ---------- | ---------------------------------------------------------------------------------- |
+| [[Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md\|День 10. В ожидании аудиенции]]         | 15.08.2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
+| [[Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md\|День 10.  Завершение миссий Сэдии]] | 08.08.2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
+| [[Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md\|День 10. Межпланарное зеркало]]         | 30.07.2024 | <ul><li><b>year</b>: 1483</li><li><b>month</b>: 0</li><li><b>day</b>: 10</li></ul> |
