--- a/content/Материалы/Таблицы/Готовые статьи.md
+++ b/content/Материалы/Таблицы/Готовые статьи.md
@@ -13,8 +13,8 @@
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Зал Чудес.md\|Зал Чудес]]                                                                   | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Статуя Возлюбленного Странника.md\|Статуя Возлюбленного Странника]]                                     | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md\|Ширь]]                                                                                              | Локация     |
-| [[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]                                                                                               | Локация     |
 | [[Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md\|Корабль Аларика]]                                                                                | Локация     |
+| [[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]                                                                                               | Локация     |
 | [[Лор/Локации/Лускан.md\|Лускан]]                                                                                                                              | Локация     |
 | [[Лор/Локации/Невервинтер.md\|Невервинтер]]                                                                                                                    | Локация     |
 | [[Лор/Локации/Острова Муншае.md\|Острова Муншае]]                                                                                                              | Локация     |
@@ -136,6 +136,7 @@
 | [[index.md\|index]]                                                                                                                                            | Хаб         |
 | [[Игры/Врата Бальдура/Хроники/День 1. Возрождение.md\|День 1. Возрождение]]                                                                                    | Хроники     |
 | [[Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md\|День 10.  Завершение миссий Сэдии]]                                                        | Хроники     |
+| [[Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md\|День 10. В ожидании аудиенции]]                                                                | Хроники     |
 | [[Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md\|День 10. Межпланарное зеркало]]                                                                | Хроники     |
 | [[Игры/Врата Бальдура/Хроники/День 2. Путешествие по планам.md\|День 2. Путешествие по планам]]                                                                | Хроники     |
 | [[Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md\|День 3. Загадочная миска, Баал и суматоха]]                                        | Хроники     |
