Quartz sync: Aug 19, 2024, 6:55 PM

--- a/content/Материалы/Таблицы/Готовые статьи.md
+++ b/content/Материалы/Таблицы/Готовые статьи.md
@@ -80,12 +80,12 @@
 | [[Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md\|Руб]]                                                                                                 | Персонаж    |
 | [[Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md\|Тори Кляйн]]                                                                                   | Персонаж    |
 | [[Действующие лица/Врата Бальдура/Фессир.md\|Фессир]]                                                                                                          | Персонаж    |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Бипин.md\|Бипин]]                                                                                        | Персонаж    |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Гвилим.md\|Гвилим]]                                                                                      | Персонаж    |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Сангмин.md\|Сангмин]]                                                                                    | Персонаж    |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Селес.md\|Селес]]                                                                                        | Персонаж    |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Сол.md\|Сол]]                                                                                            | Персонаж    |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Фланн.md\|Фланн]]                                                                                        | Персонаж    |
+| [[Бипин\|Бипин]]                                                                                        | Персонаж    |
+| [[Гвилим\|Гвилим]]                                                                                      | Персонаж    |
+| [[Сангмин\|Сангмин]]                                                                                    | Персонаж    |
+| [[Селес\|Селес]]                                                                                        | Персонаж    |
+| [[Сол\|Сол]]                                                                                            | Персонаж    |
+| [[Фланн\|Фланн]]                                                                                        | Персонаж    |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Азария.md\|Азария]]                                                                                  | Персонаж    |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Ацереща.md\|Ацереща]]                                                                                | Персонаж    |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Вик Гральт.md\|Вик Гральт]]                                                                          | Персонаж    |
