--- a/content/Материалы/Таблицы/Известные личности.md
+++ b/content/Материалы/Таблицы/Известные личности.md
@@ -13,12 +13,12 @@
 | [[Действующие лица/Местоположение неизвестно/Массирак.md\|Массирак]]                                          | <ul><li>Долина ледяного ветра</li><li>Неизвестно</li></ul>                                                                                                                                                                                                                  |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Вик Гральт.md\|Вик Гральт]]                         | <ul><li>Долина ледяного ветра</li><li>[[Лор/Локации/Невервинтер.md\|Невервинтер]]</li></ul>                                                                                                                                                                                |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Орнштейн Аддер Айнхард.md\|Орнштейн Аддер Айнхард]] | <ul><li>Долина ледяного ветра</li><li>[[Лор/Локации/Невервинтер.md\|Невервинтер]]</li></ul>                                                                                                                                                                                |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Бипин.md\|Бипин]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Гвилим.md\|Гвилим]]                                     | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Сангмин.md\|Сангмин]]                                   | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Селес.md\|Селес]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Сол.md\|Сол]]                                           | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Действующие лица/Долина Ледяного Ветра/Команда Азар/Фланн.md\|Фланн]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Бипин\|Бипин]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Гвилим\|Гвилим]]                                     | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Сангмин\|Сангмин]]                                   | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Селес\|Селес]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Сол\|Сол]]                                           | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Фланн\|Фланн]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Ацереща.md\|Ацереща]]                               | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Маления Айнхард.md\|Маления Айнхард]]               | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Опус.md\|Опус]]                                     | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
