--- a/content/Материалы/Шаблоны/Хроники Врата.md
+++ b/content/Материалы/Шаблоны/Хроники Врата.md
@@ -32,6 +32,12 @@ Limit 1
 
 # Краткая сводка
 
-<%tp.date.now("DD-MM-YYYY")%>
 
-> *[[День 4. Падение псевдо-капитана|Следующая сессия]]*
+
+```dataview
+LIST without ID "Следующая сессия: " + file.link
+From "Игры/Врата Бальдура/Хроники" 
+WHERE sessionNum > this.sessionNum
+SORT sessionNum asc
+Limit 1
+```
