Quartz sync: Aug 19, 2024, 9:39 PM

--- a/content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md
+++ b/content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md
@@ -1,9 +1,8 @@
 ---
 type: Локация
-setting: Forgotten Realms
 location:
-  - Врата Бальдура
-  - Верхний город
+  - "[[Врата Бальдура]]"
+  - "[[Верхний город]]"
 location_type: Важное здание
 ---
 
