--- a/content/Лор/Локации/Врата Бальдура/Врата Бальдура.md
+++ b/content/Лор/Локации/Врата Бальдура/Врата Бальдура.md
@@ -26,5 +26,5 @@ banner_y: 0.5
 
 > *Для информации о регионах см.:*
 > - [[Верхний город]]
-> - [[Нижний город (заполнить)]]
-> - [[Внешний город (заполнить)]]
+> - [[Нижний город]]
+> - [[Внешний город]]
