--- a/content/Лор/Организации/Врата Бальдура/Правительство/Законы.md
+++ b/content/Лор/Организации/Врата Бальдура/Правительство/Законы.md
@@ -11,7 +11,7 @@ info_type:
 #### Законы
 Законы хранится в трёх копиях, в трёх разных библиотеках [[Высший Зал|Высшего Зала]] — такова мера безопасности на случай пожара. Существуют и запасные копии, которые находятся у патрициев и юристов [[Верхний город|Верхнего города]]. Свод состоит из большого количества взаимосвязанных регламентов, декретов, соглашений и договоров, но большинство горожан никогда его не видело, а даже если бы видело, все равно бы не поняло ни слова.
  
-На практике, свод законов предоставляет большинство прав и протекций патрициату и [[Дозор|Дозор]], когда как остальные граждане получают изрядно меньше привилегий. Жители [[Внешний город (заполнить)|Внешнего города]] классифицируются как «приносящие экономическую пользу», что даёт им некоторые права. В зависимости от оценки герцога или пэра, классификация гражданина может изменится от «почётный дипломат» (что дарует множество привилегий) до «захватчик» (что равносильно смертному приговору).
+На практике, свод законов предоставляет большинство прав и протекций патрициату и [[Дозор|Дозор]], когда как остальные граждане получают изрядно меньше привилегий. Жители [[Внешний город|Внешнего города]] классифицируются как «приносящие экономическую пользу», что даёт им некоторые права. В зависимости от оценки герцога или пэра, классификация гражданина может изменится от «почётный дипломат» (что дарует множество привилегий) до «захватчик» (что равносильно смертному приговору).
 
 #### Примечательные законы
 Из всех нюансов и ненадежно исполняемых законов города, следующие, как правило, наиболее удивляют вновь прибывших.
@@ -20,8 +20,8 @@ info_type:
 В то время как торговцы и посетители города всегда приветствуются, шпионы и диверсанты — нет. Законные иностранные агенты, такие как послы, обязаны явиться в [[Высший Зал]] для собеседования и получения лицензии. Технически, посетители должны делать то же самое, но закон редко упоминается у городских ворот и ещё реже соблюдается. Что отличает посетителя от иностранного агента, может быть неясно, и, если у человека нет лицензии, отмечающей его как одного или другого, любой  герцог или пэр может в одностороннем порядке изменить статус негражданина, фактически приговорив его к тюремному заключению или еще хуже.
 
 **Ограничение размера животных**
-По традиции, Врата Балдура запрещают животным, размером больше павлина, находиться в пределах городских стен. Посетители, решившие не сдавать своих любимых питомцев (или ценных животных, которых они намерены продать), иногда прибывают в город с большими павлинами на буксире, чтобы доказать, что их пушистый компаньон соответствует законным требованиям. Это привело к бурному росту, шумной и особенно жестокой индустрии разведения павлинов во [[Внешний город (заполнить)|Внешнем городе]].
+По традиции, Врата Балдура запрещают животным, размером больше павлина, находиться в пределах городских стен. Посетители, решившие не сдавать своих любимых питомцев (или ценных животных, которых они намерены продать), иногда прибывают в город с большими павлинами на буксире, чтобы доказать, что их пушистый компаньон соответствует законным требованиям. Это привело к бурному росту, шумной и особенно жестокой индустрии разведения павлинов во [[Внешний город|Внешнем городе]].
 
-Большинство путешественников платят за постой крупногабаритных животных либо во [[Внешний город (заполнить)|Внешнем городе]], либо на ранчо за пределами города. Некоторые животные просто сдаются у ворот, становясь собственностью [[Дозор|Дозора]] или [[Пылающий Кулак|Пылающего Кулака]] (в зависимости от региона), или продаются на ежемесячных аукционах.
+Большинство путешественников платят за постой крупногабаритных животных либо во [[Внешний город|Внешнем городе]], либо на ранчо за пределами города. Некоторые животные просто сдаются у ворот, становясь собственностью [[Дозор|Дозора]] или [[Пылающий Кулак|Пылающего Кулака]] (в зависимости от региона), или продаются на ежемесячных аукционах.
 
 
