--- a/content/Лор/Организации/Легион Смерти.md
+++ b/content/Лор/Организации/Легион Смерти.md
@@ -4,3 +4,8 @@ location:
   - Амн
 ---
 
+
+Туда набирали тех, кто либо провинился по каким-то делам, либо тех, от кого нужно по каким-то причинам избавиться. Им давали абсолютно безумные задания, на которых обычно погибало от 70% отряда. Но, отряд всегда выполнял их. По отчётам из Амна должны были погибнуть все. 
+
+Легион это достаточно разномастная структура. Но, зачастую от того, что туда берут неизвестных, никому неизвестных солдат или офицеров, смысла нет. От любого человека без происхождения можно просто избавиться, не отправляя его куда-либо, особенно на такие опасные задания. Так что, зачастую там крутится те, кто не должен оказывать влияние на власть, однако за кем нужно присматривать. Например, бастарды, наследники второй и третьей очереди у какого-либо дворянского семейства и прочее, прочее, прочее, прочее.
+
