--- a/content/Лор/Существа/Чешуйчатые/Юань-ти.md
+++ b/content/Лор/Существа/Чешуйчатые/Юань-ти.md
@@ -1,5 +1,6 @@
 ---
 type: Информация
+setting: Forgotten Realms
 location: Торил
 info_type: Расы
 tags: Юань-ти
@@ -64,6 +65,6 @@ banner_y: 0
 
 
 ## *Так же смотрите:* 
-- [[Расовая история юань-ти]]
+- [[Расовая история]]
 - [[Общество юань-ти]]
 - [[Быт юань-ти]]
