--- a/content/Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md
+++ b/content/Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md
@@ -1,5 +1,6 @@
 ---
 type: Информация
+setting: Forgotten Realms
 location:
   - Торил
 info_type: Расы
@@ -7,7 +8,10 @@ tags:
   - Юань-ти
 ---
 #### Домашние хозяйства
-Юань-ти живут упорядоченными иерархическими группами, известными как домашние хозяйства, каждое из которых управляется строгой командной цепочкой. Члены домашнего хозяйства связаны либо кровью, или браком. Любой юань-ти, нарушающий командную цепочку - либо оспаривая приказы, либо отчитываясь не перед тем, кто непосредственно выше него - рассматривается с подозрением и отвращением. Такое нарушение обычно сопровождается формальной потерей статуса, выливающейся в более низкое положение в командной цепи. Такое понижение не может происходить, если старшие юань-ти спорят друг с другом по какой-либо проблеме и большинство семьи не принимает однозначно чью-либо сторону.
+Юань-ти живут упорядоченными иерархическими группами, известными как домашние хозяйства, каждое из которых управляется строгой командной цепочкой. Члены домашнего хозяйства связаны либо кровью, или браком. Любой юань-ти, нарушающий командную цепочку - либо оспаривая приказы, либо отчитываясь не перед тем, кто непосредственно выше
+него - рассматривается с подозрением и отвращением. Такое нарушение обычно сопровождается формальной потерей стату-
+са, выливающейся в более низкое положение в командной цепи. Такое понижение не может происходить, если старшие
+юань-ти спорят друг с другом по какой-либо проблеме и большинство семьи не принимает однозначно чью-либо сторону.
 
 Однако тех, кто постоянно ломает иерархию, выгоняют или даже убивают при "несчастных случаях", о которых все в домашнем хозяйстве знают, что никакие это не несчастные случаи.
 
@@ -16,14 +20,16 @@ tags:
 
 Большинство юань-ти считает хорошим тоном предугадать, что за приказ отдаст старший, и фиксируют зацепки в поведении, тоне голоса и отношении, чтобы отреагировать соответственно, прежде чем приказ будет отдан. Но лишь самые внеранговые священники Ссета (и то лишь в иерархии храмов) ожидают, что другие юань-ти будут знать то, что ожидает их, но еще не сказано, или пытаются наказать тех, кто не умеет читать их разум.
 
-Приказы всегда отдаются вежливо и спокойно. Моргание глаз, знак хвостом или поклон указывают, что приказ услышан. Если через несколько мгновений такого сигнала не последовало, приказ повторяется - столь же вежливо, но зачастую чуть громче и обычно с меньшего расстояния. При повторной отдаче приказа по возможности устанавливается контакт "глаза в глаза".
+Приказы всегда отдаются вежливо и спокойно. Моргание глаз, знак хвостом или поклон указывают, что приказ услышан. Если через несколько мгновений такого сигнала не последовало, приказ повторяется - столь же вежливо, но зачастую
+чуть громче и обычно с меньшего расстояния. При повторной отдаче приказа по возможности устанавливается контакт "глаза в глаза".
 
 Целенаправленно отвергать приказы обычно смеют лишь старшие и те юань-ти, которые считают себя равными или выше того, кто отдает приказ. Юань-ти может также быть временно освобожден от власти на основании членства культа, приказа другого, более высокого господина или статуса эмиссара храма или племени.
 
 #### Старшие
-Домашние хозяйства враэл-оло различаются по тому, как они обращаются с больными стариками. Таких членов семейства редко атакуют или убивают, прежде всего потому, что это дало бы прецедент для подобного плохого обращения с самими преступниками в старости. Большинство домашних хозяйств юань-ти гарантирует, что такие старики должным образом питаются и живут, а в остальном их просто игнорируют - особенно если они огрызаются. Некоторые поручают им определенные ключевые секреты семейства, чтобы держать под контролем честолюбивую молодежь. Юань-ти, нуждающиеся в покровительстве таких стариков-неудачников для доступа к семейным магическим изделиям или к определенному богатству, обычно намного более общительны, находчивы и почтительны, чем те, кому это не нужно. Вдобавок, враэл оло, должным образом заботившимся о больных стариках, может быть гарантирована поддержка родни за пределами домашнего хозяйства в будущих спорах - неважно, живы старики или уже умерли.
+Домашние хозяйства враэл оло различаются по тому, как они обращаются с больными стариками. Таких членов семейства редко атакуют или убивают, прежде всего потому, что это дало бы прецедент для подобного плохого обращения с самими преступниками в старости. Большинство домашних хозяйств юань-ти гарантирует, что такие старики должным образом питаются и живут, а в остальном их просто игнорируют - особенно если они огрызаются. Некоторые поручают им определенные ключевые секреты семейства, чтобы держать под контролем честолюбивую молодежь. Юань-ти, нуждающиеся в покровительстве таких стариков-неудачников для доступа к семейным магическим изделиям или к определенному богатству, обычно намного более общительны, находчивы и почтительны, чем те, кому это не нужно. Вдобавок, враэл оло, должным образом заботившимся о больных стариках, может быть гарантирована поддержка родни за пределами домашнего хозяйства в будущих спорах - неважно, живы старики или уже умерли.
 
-Некоторые юань-ти планируют свою отставку заранее, покупая роскошные окруженные стенами сельские поместья, в которых они смогут жить на старости лет. Ощущая, что способности начинают их подводить, они оставляют свое место в пределах домашнего хозяйства и перебираются в собственные роскошные поместья, где они могут свысока управлять почтительными людьми-рабами и умирать медленно и мирно. Старшие, отказывающиеся уступать свои позиции более способным или как-либо иначе бросающие вызов власти ссрат, часто считаются раздражителями. Однако, вместо того, чтобы убивать их, семейство часто их подкупает, отправляя в удобную отставку в другое место. Семейства, выбирающие такой путь, обычно либо покупают, либо захватывают человечекое жилье соответствующего уровня роскоши.
+Некоторые юань-ти планируют свою отставку заранее, покупая роскошные окруженные стенами сельские поместья, в которых они смогут жить на старости лет. Ощущая, что способности начинают их подводить, они оставляют свое место в пределах домашнего хозяйства и перебираются в собственные роскошные поместья, где они могут свысока управлять почтительными людьми-рабами и умирать медленно и мирно. Старшие, отказывающиеся уступать свои позиции более способным или как-либо иначе бросающие вызов власти ссрат, часто считаются раздражителями. Однако, вместо того, чтобы убивать
+их, семейство часто их подкупает, отправляя в удобную отставку в другое место. Семейства, выбирающие такой путь, обычно либо покупают, либо захватывают человечекое жилье соответствующего уровня роскоши.
 
 Почти все юань-ти уважают собственность и персону старшего юань-ти, живущего не у дел, независимо от племени или политики. Вторжение в окруженный стеной комплекс старшего, кража его собственности или совершение насилия против его персоны или рабов просто так не делаются. Множество таких роскошных особняков (особенно в более диких восточных краях Калимшана и на юге Задних Земель Ташалара) кишит испуганными людьми-рабами, старающимися игнорировать увядающий труп мертвого владыки-юань-ти или живущими вокруг свившегося неподвижного старика, спящего десятилетиями.
 
