--- a/content/Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md
+++ b/content/Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md
@@ -6,13 +6,15 @@ info_type: Расы
 tags: Юань-ти
 ---
 #### Чистокровные (Purebloods)
-Юань-ти, которые могут сойти за людей при наличии подходящей одежды, косметики и магии, известны как чистокровные. Этим существам обычно поручается проникновение в гуманоидные общества и ведение тайных действий, требующих прямого контакта с гуманоидами.
+Юань-ти, которые могут сойти за людей при наличии подходящей одежды, косметики и магии, известны как чистокровные. Этим существам обычно поручается проникновение в гуманоидные общества и ведение тайных действий, требующих
+прямого контакта с гуманоидами.
 
 #### Полукровки (Halfbloods)
 Юань-ти, обладающие такими очевидными змеиными чертами, как полностью чешуйчатое тело, змеи вместо рук, змеиная голова, змеиный хвост или змеиные хвосты вместо ног, называются полукровками. Полукровки формируют большую часть защитных сил сообщества юань-ти.
 
 #### Отвращения (Abominations)
-Отвращение похоже на змею размером с человека либо во всем, либо имеет лишь одну человекоподобную черту - как правило, голову или руки. Действительно, классические юань-ти, о которых люди рассказывают у домашнего очага - чешуйчатые змеи с человекоподобными руками. Это устрашающее существо может говорить на человеческих языках и встать вертикально, сравнявшись с человеком ростом. Многие из таких историй ошибочно утверждают, что эти устрашающие существа могут при желании сменить форму на чистокровного - часто в красивую человекоподобную женщину, змеиная кровь которой видна лишь тогда, когда она совращает людей-мужчин или когда случайно открывается ее тело. Конечно же, правда, стоящая за подобными рассказами - в том, что заклинания могут позволить любому юань-ти временно принять человеческую форму.
+Отвращение похоже на змею размером с человека либо во всем, либо имеет лишь одну человекоподобную черту - как правило, голову или руки. Действительно, классические юань-ти, о которых люди рассказывают у домашнего очага - чешуйчатые змеи с человекоподобными руками. Это устрашающее существо может говорить на человеческих языках и встать вертикально, сравнявшись с человеком ростом. Многие из таких историй ошибочно утверждают, что эти устрашающие существа могут при желании сменить форму на чистокровного - часто в красивую человекоподобную женщину, змеиная кровь
+которой видна лишь тогда, когда она совращает людей-мужчин или когда случайно открывается ее тело. Конечно же, правда, стоящая за подобными рассказами - в том, что заклинания могут позволить любому юань-ти временно принять человеческую форму.
 
 #### Анафемы (Anathemas)
 Выше и в стороне от большинства юань-ти стоят редкие анафемы, похожие на великую змею с человеческими руками и шестью человеческими головами. Такое существо обладает огромными силами, и думают, что оно является божественным воплощением Ссета, бога юань-ти. Почти все анафемы собирают свои собственные культы юань-ти, почитающие их и живущие с ними. Такие возникающие племена часто переживают своих основателей, становясь длительными ха'сраммасс (великие племена). Эти мощные существа полностью описаны в "Фолианте Извергов".
