--- a/content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Се'Сехен.md
+++ b/content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Се'Сехен.md
@@ -6,10 +6,24 @@ location: Торил
 tags:
   - Юань-ти
 ---
-В настоящее время Племя Се'Сехен - самое большое и мощное в Черных Джунглях. После исчезновения Дома Хсс'тафи в Году Пойманных Грез (-320 DR) Се'Сехен захватили земли павшего племени - и вместе с ними контроль над Сс'интии'ссарии и Ямой Гадюк. Се'Сехен тесно объединились с Ссетом в течение его кампании, основав Империю Змей, и в нагаду за эти усилия им был отдан контроль над Бассейном Ташалара. В Году Павшей Ярости (20 DR), десятилетие спустя после исчезновения Ссета, Се'Сехен были вынуждены уйти из Ташалара в свои твердыни на северо-западных берегах Моря Лапал. В результате этого поражения они впали в столетия сонливости.
+В настоящее время Племя Се'Сехен - самое большое и мощное в Черных Джунглях. После исчезновения Дома Хсс'тафи
+в Году Пойманных Грез (-320 DR) Се'Сехен захватили земли павшего племени - и вместе с ними контроль над Сс'интии'сса-
+рии и Ямой Гадюк. Се'Сехен тесно объединились с Ссетом в течение его кампании, основав Империю Змей, и в нагаду за
+эти усилия им был отдан контроль над Бассейном Ташалара. В Году Павшей Ярости (20 DR), десятилетие спустя после ис-
+чезновения Ссета, Се'Сехен были вынуждены уйти из Ташалара в свои твердыни на северо-западных берегах Моря Лапал. В
+результате этого поражения они впали в столетия сонливости.
 
-Кратковременное новое появление Ссета в течение Времени Неприятностей подбодрило Се'Сехен, побудив их заключить коварный союз с торговым консорциумом Рундиин из Ташалара. Се'Сехен обменивали экзотические специи и яды на рабов и средства транспортировки своих шпионов в порты на севере. Шпионы, убийцы и воры Се'Сехен (включая членов Дома Экстаминос) рассеяны по всему Фаэруну, где они работают для продвижения планов юань-ти по доминированию в поверхностном мире.
+Кратковременное новое появление Ссета в течение Времени Неприятностей подбодрило Се'Сехен, побудив их заклю-
+чить коварный союз с торговым консорциумом Рундиин из Ташалара. Се'Сехен обменивали экзотические специи и яды на
+рабов и средства транспортировки своих шпионов в порты на севере. Шпионы, убийцы и воры Се'Сехен (включая членов
+Дома Экстаминос) рассеяны по всему Фаэруну, где они работают для продвижения планов юань-ти по доминированию в по-
+верхностном мире.
 
-Се'Сехен считают племена Экстаминос и Саурингар своими ближайшими союзниками, но они часто сталкиваются со Вьющимся Заговором, так как обе группы считают себя как законными творцами господства юань-ти на Фаэруне. Еще чаще Се'Сехен открыто борются с племенами Эселемас и Дженестас - хотя бы потому, что все три дома заявляют свои права на часть Черных Джунглей.
+Се'Сехен считают племена Экстаминос и Саурингар своими ближайшими союзниками, но они часто сталкиваются со
+Вьющимся Заговором, так как обе группы считают себя как законными творцами господства юань-ти на Фаэруне. Еще чаще
+Се'Сехен открыто борются с племенами Эселемас и Дженестас - хотя бы потому, что все три дома заявляют свои права на
+часть Черных Джунглей.
 
-Члены племени Се'Сехен широко экспериментируют с другими существами Черных Джунглей. Их самые успешные создания - змееподобная ти-кхана, и дому теперь служат хищные ти-кханы-дейнонихи. Се'Сехен известны своей способностью выплевывать яд. Большинство змееязыких членов этого племени обладает умением Плевок Ядом.
+Члены племени Се'Сехен широко экспериментируют с другими существами Черных Джунглей. Их самые успешные со-
+здания - змееподобная ти-кхана, и дому теперь служат хищные ти-кханы-дейнонихи. Се'Сехен известны своей способно-
+стью выплевывать яд. Большинство змееязыких членов этого племени обладает умением Плевок Ядом.
