--- a/content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md
+++ b/content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md
@@ -6,6 +6,17 @@ location: Торил
 tags:
   - Юань-ти
 ---
-Хсс'тафин, как известны члены этого дома, были ухвачены на северо-западных берегах Моря Лапал и магически перенесены в руины Сс'тхар'тисс'ссуна в Году Пойманных Грез (-320 DR). С тех пор они были частью правящей знати Наджары, Королевства Змей, где они служат прежде всего администраторами, торговцами и религиозными лидерами.
+Хсс'тафин, как известны члены этого дома, были ухвачены на северо-западных берегах Моря Лапал и магически пере-
+несены в руины Сс'тхар'тисс'ссуна в Году Пойманных Грез (-320 DR). С тех пор они были частью правящей знати Наджары,
+Королевства Змей, где они служат прежде всего администраторами, торговцами и религиозными лидерами.
 
-В течение господства Терпенци хсс'тафин цивилизовали племена офидианов и восстановили разрушенный город саррукхов Сс'тхар'тисс'ссун вместе с его главным храмовым комплексом. После падения Наджары члены этого племени были инструментом восстановления правления нагары (темных наг - потомков Терпенци) и осторожного преобразования Королевства Змей в серьезную силу в Западном Сердцеземье. Дом Хсс'тафи также породил процесс создания зараженных и кровавых стражей, но эти методы уже распространились к юань-ти Хлондета и Чалтского полуострова. Хсс'тафин считают свое ха'сраммасс самым способным и практичным из всех. Они не слишком горды, чтобы работать с нагами и даже под их началом (или еще с каким-либо существом в том же отношении), если учитывать, что это конечном счете продвинет проекты святого Ссета и приблизит законное господство расы юань-ти. Однако, другие враэл оло считают их беспринципными интриганами, которым нельзя доверить и единственную медную монету, уж не говоря о будущем расы. Хсс'тафин известны своими коброподобными капюшонами. Змееголовые члены этого племени обычно обладают умением Голова Кобры.
+В течение господства Терпенци хсс'тафин цивилизовали племена офидианов и восстановили разрушенный город сар-
+рукхов Сс'тхар'тисс'ссун вместе с его главным храмовым комплексом. После падения Наджары члены этого племени были
+инструментом восстановления правления нагары (темных наг - потомков Терпенци) и осторожного преобразования Королев-
+ства Змей в серьезную силу в Западном Сердцеземье. Дом Хсс'тафи также породил процесс создания зараженных и крова-
+вых стражей, но эти методы уже распространились к юань-ти Хлондета и Чалтского полуострова. Хсс'тафин считают свое
+ха'сраммасс самым способным и практичным из всех. Они не слишком горды, чтобы работать с нагами и даже под их нача-
+лом (или еще с каким-либо существом в том же отношении), если учитывать, что это конечном счете продвинет проекты
+святого Ссета и приблизит законное господство расы юань-ти. Однако, другие враэл оло считают их беспринципными ин-
+триганами, которым нельзя доверить и единственную медную монету, уж не говоря о будущем расы. Хсс'тафин известны
+своими коброподобными капюшонами. Змееголовые члены этого племени обычно обладают умением Голова Кобры.
