--- a/content/Лор/Организации/Врата Бальдура/Правительство/Управляющий Портом.md
+++ b/content/Лор/Организации/Врата Бальдура/Правительство/Управляющий Портом.md
@@ -8,6 +8,6 @@ organisation:
 ---
 Управляющий Портом [[Врата Бальдура|Врат Балдура]] был важнейшим представителем власти в городской бюрократии. Поскольку [[Врата Бальдура|Врата]] были бесценным торговым портом в экономике Побережья Мечей, эта должность имела огромное значение. В обязанности начальника порта входил надзор за Серой Гаванью, ведение ее манифеста и установление налогов на ввозимые в город товары.
 
-Их штаб-квартира располагалась в одноименном офисе капитана порта в районе [[Восточный Путь (заполнить)]] [[Нижний город (заполнить)|Нижнего города]]
+Их штаб-квартира располагалась в одноименном офисе капитана порта в районе [[Восточный Путь (заполнить)]] [[Нижний город|Нижнего города]]
 
 - На момент #1480х/1483ЛД позицию занимает [[Эрл Наморран]] 
