--- a/content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Ссерадесс.md
+++ b/content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Ссерадесс.md
@@ -6,12 +6,25 @@ location: Торил
 tags:
   - Юань-ти
 ---
-Ссерадесс когда-то открыто управлял бассейном Тиндола, но поражение их солдат-рабов - лизардфолков отрядами Империи Шуун в Году Гончих (293 DR) вынудило их отступить в свои подводные владения. В течение некоторого времени после этого члены Дома Ссерадесс косвенно управляли через агентов, просочившихся в среду придворных Тиндола. Эта стратегия рухнула в Году Множества Змей (605 DR), когда агенты Ссерадесс были разоблачены и вновь потерпели поражение. В настоящее время Ссерадесс доминируют на водных путях Тиндола и в подземном проходе, известном как Безумие Лабранда.
+Ссерадесс когда-то открыто управлял бассейном Тиндола, но поражение их солдат-рабов - лизардфолков отрядами Им-
+перии Шуун в Году Гончих (293 DR) вынудило их отступить в свои подводные владения. В течение некоторого времени по-
+сле этого члены Дома Ссерадесс косвенно управляли через агентов, просочившихся в среду придворных Тиндола. Эта стра-
+тегия рухнула в Году Множества Змей (605 DR), когда агенты Ссерадесс были разоблачены и вновь потерпели поражение. В
+настоящее время Ссерадесс доминируют на водных путях Тиндола и в подземном проходе, известном как Безумие Лабранда.
 
-Эти владения изолированы достаточно, чтобы племя не считало никакое из других племен юань-ти своим истинным союзником или противником.
+Эти владения изолированы достаточно, чтобы племя не считало никакое из других племен юань-ти своим истинным союз-
+ником или противником.
 
-С тех пор, как они потеряли контроль над Тиндолом, Ссерадесс пыталить утвердить свое влияние над людями этого царства, но осторожная бдительность живущих в нем необузданных офиофобов как минимум затруднила успех. Племя гораздо успешнее победило племена куо-тоа Гатгулгапула (см. Безумие Лабранда в Главе 7) и использует их для управления водными глубинами.
+С тех пор, как они потеряли контроль над Тиндолом, Ссерадесс пыталить утвердить свое влияние над людями этого
+царства, но осторожная бдительность живущих в нем необузданных офиофобов как минимум затруднила успех. Племя го-
+раздо успешнее победило племена куо-тоа Гатгулгапула (см. Безумие Лабранда в Главе 7) и использует их для управления
+водными глубинами.
 
-Ссерадесс используют куо-тоа как "фермеров моря" для сбора рыбы, жемчуга и определенных морских водорослей, ценнящихся людьми-алхимиками и изготовителями духов и благовоний. Эти морские изделия продаются через агентов (или используются для взяток) в Тиндоле. Однако, определенные Ссерадесс начинают нервничать из-за столь медленного процесса достижения реальной власти, так что они собираются нанять - и в конечном счете контролировать - нескольких чужеземцев-авантюристов, способных добавить мускулов их интригам на берегу.
+Ссерадесс используют куо-тоа как "фермеров моря" для сбора рыбы, жемчуга и определенных морских водорослей,
+ценнящихся людьми-алхимиками и изготовителями духов и благовоний. Эти морские изделия продаются через агентов (или
+используются для взяток) в Тиндоле. Однако, определенные Ссерадесс начинают нервничать из-за столь медленного процес-
+са достижения реальной власти, так что они собираются нанять - и в конечном счете контролировать - нескольких чужезем-
+цев-авантюристов, способных добавить мускулов их интригам на берегу.
 
-Члены этого племени известны своей способностью плавать и дышать водой. Большинство змеешеих Ссерадесс обладает умением Водная Адаптация (см. Умения в "Расах Фаэруна").
+Члены этого племени известны своей способностью плавать и дышать водой. Большинство змеешеих Ссерадесс обла-
+дает умением Водная Адаптация (см. Умения в "Расах Фаэруна").
